align fixed

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -520,6 +520,7 @@ span.shareIcon{
     padding-right:15px;
     h1{
         color: #000;
+        text-align: left;
         font-feature-settings: 'salt' on;
         font-family: 'MonumentGrotesk-Regular';
         font-size: 32px;
